# AI_market_intel_platform

./: .dockerignore  .gitignore  API_DOCS.md  CHORE.md  DEPLOYMENT.md  Dockerfile  PROJECT_STATUS.md  README.md  REFACTOR_STATUS.md  STATUS.md  TODO.md  TODO_CRAWL_REAL_RATINGS.md  dataset_amazon-product-details-scraper_2026-01-28_09-03-46-099.json  docker-compose.prod.yml  docker-compose.yml  keplo_clone_idea_19jan26.md  main.py  manage.py  pyproject.toml  slides_content.md  stress_test_report_B09FV1J5XC.md  test_detective_report.md  total_war_test_B09FV1J5XC.md  vacuum_db.py  worker_api.py
analysis_workspace/: Gioi-thieu-Nen-tang-Product-Intelligence-PIP.pptx  comparing_sellersprite.md
api_research/: meta_data_schema.md  meta_strategy_draft.md  tiktok_cost_master.md  tiktok_data_schema.md  tiktok_strategy_draft.md
clean_scripts/: clean_scraper_json.py  clean_scraper_metadata.py  fix_ghost_parents.py
docs/: METRICS_CALCULATION.md  USER_GUIDE_DEMO.md  USER_GUIDE_FULL.html  USER_GUIDE_FULL.md
markdown_scripts/: task_02_analyze_repo.md  task_03_slide_structure.md  task_04_generate_slides.md  task_05_refine_slides.md  task_06_feedback_form.md  task_07_product_dna_ingest.md  task_08_clean_ghost_parents.md  task_09_clean_scraper_metadata.md  task_10_fix_stats_db.md  task_11_ui_category_enhancement.md  task_13_rebuild_products_from_source.md  task_14_manual_aspect_cleaning.md  task_15a_db_normalization_sync.md  task_16_metadata_ingestion_1500.md
reports/: DETECTIVE_CASE_STUDY_B09FV1J5XC.md
scout_app/: Market_Intelligence.py  README.md  feedback_app.py  main.py  (+1 more)
(+101 files in other folders)
